--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,76 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.head{
+  color:white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.label{
+  margin-right: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.input{
+  height:50px;
+  width:300px;
+  font-size: 20px;
+  color: white;
+  margin-bottom: 10px;
+  border-style: none;
+  border-color: (59,130,255,0);
+  background-color: rgba(255,255,255,0.03);
+}
+.button{
+  background-image: linear-gradient(164deg,#5bd8ff 0%,#e55056 100%);
+  font-size: 16px;
+  border-width: 11px;
+  border-color: rgba(255,255,255,0.03);
+  box-shadow: 0px 18px 120px 0px #0c101b;
+  width:60%;
+  height: 60px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+::placeholder{
+  padding-left: 10px;
+  font-size: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.register {
+  width: 500px;
+  height:400px;
+  border: 1px solid #d6d7da;
+  padding: 0px 15px 15px 15px;
+  border-radius: 5px ;
+  font-family: arial;
+  line-height: 16px;
+  color: #333333;
+  font-size: 20px;
+  background: #171e28;
+  margin: 100px auto;
+}
+
+
+.form input {
+  padding: 30px;
+  border: solid 1px #bdc7d8;
+}
+
+
+.errorMsg {
+  color: #cc0000;
+  margin-bottom: 12px;
+}
+
+.sucessMsg {
+  color: #6b8e23;
+  margin-bottom: 10px;
+}
+
+.forgot_password{
+  text-decoration: underline;
+  color:white;
+  font-size: 12px;
+  text-align: left;
+  margin-left: 100px;
+  margin-bottom: 20px;
 }
